#include_directories(${CMAKE_SOURCE_DIR}/src/eigen)
#include_directories(${CMAKE_SOURCE_DIR}/src/core)
#include_directories(${CMAKE_SOURCE_DIR}/src/experiment)
#include_directories(${CMAKE_SOURCE_DIR}/src/statistic)
#include_directories(${CMAKE_SOURCE_DIR}/src/communications)
#include_directories(${CMAKE_SOURCE_DIR}/src/glviz)
#include_directories(${CMAKE_SOURCE_DIR}/src/optotrak)
#include_directories(${CMAKE_SOURCE_DIR}/experimentsbrown)

add_executable(blindRtG blindRtG.cpp)
target_link_libraries(blindRtG  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpAmanda2 ExpAmanda2.cpp)
target_link_libraries(ExpAmanda2  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpAmanda ExpAmanda.cpp)
target_link_libraries(ExpAmanda  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})

add_executable(ExpHugo ExpHugo.cpp)
target_link_libraries(ExpHugo  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
# XXX CARLO 7 dicembre
add_executable(ExpHugo2.0 ExpHugo2.0.cpp)
target_link_libraries(ExpHugo2.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpHugo30 ExpHugo30.cpp)
target_link_libraries(ExpHugo30  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
# XXX OK!
add_executable(ExpOct2012blindRtG ExpOct2012blindRtG.cpp)
target_link_libraries(ExpOct2012blindRtG  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012fullviewRtG ExpOct2012fullviewRtG.cpp)
target_link_libraries(ExpOct2012fullviewRtG  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012grasp2.0 ExpOct2012grasp2.0.cpp)
target_link_libraries(ExpOct2012grasp2.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012grasp3.0 ExpOct2012grasp3.0.cpp)
target_link_libraries(ExpOct2012grasp3.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012grasp4.0 ExpOct2012grasp4.0.cpp)
target_link_libraries(ExpOct2012grasp4.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012offplace2.0 ExpOct2012offplace2.0.cpp)
target_link_libraries(ExpOct2012offplace2.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012offplace ExpOct2012offplace.cpp)
target_link_libraries(ExpOct2012offplace  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012reachtograsp2.0 ExpOct2012reachtograsp2.0.cpp)
target_link_libraries(ExpOct2012reachtograsp2.0  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ExpOct2012RtG ExpOct2012RtG.cpp)
target_link_libraries(ExpOct2012RtG  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(RtGblind RtGblind.cpp)
target_link_libraries(RtGblind  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeOrientation ShapeOrientation.cpp)
target_link_libraries(ShapeOrientation  Core GLViz Experiment Optotrak Communication Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeOrientationVR2 ShapeOrientationVR2.cpp)
target_link_libraries(ShapeOrientationVR2  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeOrientationVR3 ShapeOrientationVR3.cpp)
target_link_libraries(ShapeOrientationVR3  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeOrientationVR ShapeOrientationVR.cpp)
target_link_libraries(ShapeOrientationVR  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancy3Depths1.2mouse ShapeSizeConstancy3Depths1.2mouse.cpp)
target_link_libraries(ShapeSizeConstancy3Depths1.2mouse  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancy3Depths1.3keyb ShapeSizeConstancy3Depths1.3keyb.cpp)
target_link_libraries(ShapeSizeConstancy3Depths1.3keyb  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancy3DepthsEllipsoidTest ShapeSizeConstancy3DepthsEllipsoidTest.cpp)
target_link_libraries(ShapeSizeConstancy3DepthsEllipsoidTest  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancy3DepthsTraining ShapeSizeConstancy3DepthsTraining.cpp)
target_link_libraries(ShapeSizeConstancy3DepthsTraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtG1.1 ShapeSizeConstancyRtG1.1.cpp)
target_link_libraries(ShapeSizeConstancyRtG1.1  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtG-allplaces ShapeSizeConstancyRtG-allplaces.cpp)
target_link_libraries(ShapeSizeConstancyRtG-allplaces  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtG-offplace ShapeSizeConstancyRtG-offplace.cpp)
target_link_libraries(ShapeSizeConstancyRtG-offplace  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtG-offplace-training ShapeSizeConstancyRtG-offplace-training.cpp)
target_link_libraries(ShapeSizeConstancyRtG-offplace-training  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtG-onplace ShapeSizeConstancyRtG-onplace.cpp)
target_link_libraries(ShapeSizeConstancyRtG-onplace  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(ShapeSizeConstancyRtGtraining ShapeSizeConstancyRtGtraining.cpp)
target_link_libraries(ShapeSizeConstancyRtGtraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(testObject testObject.cpp)
target_link_libraries(testObject  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(testLoaderExpHugo testLoaderExpHugo.cpp)
target_link_libraries(testLoaderExpHugo Core Experiment )
# Brown 1/26/13
add_executable(stereopsisTest stereopsisTest.cpp)
target_link_libraries(stereopsisTest  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
### Spring 2013
add_executable(spring13-pointPerceive_adjustment spring13-pointPerceive_adjustment.cpp)
target_link_libraries(spring13-pointPerceive_adjustment  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-pointPerceive_pointingTraining spring13-pointPerceive_pointingTraining.cpp)
target_link_libraries(spring13-pointPerceive_pointingTraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-pointPerceive_pointing spring13-pointPerceive_pointing.cpp)
target_link_libraries(spring13-pointPerceive_pointing  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-pointPerceive_perceptual spring13-pointPerceive_perceptual.cpp)
target_link_libraries(spring13-pointPerceive_perceptual  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircasePointing spring13-staircasePointing.cpp)
target_link_libraries(spring13-staircasePointing  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircaseAdjustment spring13-staircaseAdjustment.cpp)
target_link_libraries(spring13-staircaseAdjustment  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircasePointingMixedConditions spring13-staircasePointingMixedConditions.cpp)
target_link_libraries(spring13-staircasePointingMixedConditions  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircaseComparison spring13-staircaseComparison.cpp)
target_link_libraries(spring13-staircaseComparison  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(stimulusTest stimulusTest.cpp)
target_link_libraries(stimulusTest  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircaseComparison2 spring13-staircaseComparison2.cpp)
target_link_libraries(spring13-staircaseComparison2  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircaseComparison3 spring13-staircaseComparison3.cpp)
target_link_libraries(spring13-staircaseComparison3  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircasePointing2 spring13-staircasePointing2.cpp)
target_link_libraries(spring13-staircasePointing2  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring13-staircaseAdjustment2 spring13-staircaseAdjustment2.cpp)
target_link_libraries(spring13-staircaseAdjustment2  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
### Fall 2013
add_executable(fall13-expAmandaOneInch-x fall13-expAmandaOneInch-x.cpp)
target_link_libraries(fall13-expAmandaOneInch-x  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-expAmandaOneInch-z fall13-expAmandaOneInch-z.cpp)
target_link_libraries(fall13-expAmandaOneInch-z  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-expClaireHandOcclusion fall13-expClaireHandOcclusion.cpp)
target_link_libraries(fall13-expClaireHandOcclusion  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-staircasePointing fall13-staircasePointing.cpp)
target_link_libraries(fall13-staircasePointing  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-expClaireHandOcclusionTraining fall13-expClaireHandOcclusionTraining.cpp)
target_link_libraries(fall13-expClaireHandOcclusionTraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-expClaireHandOcclusionTrial fall13-expClaireHandOcclusionTrial.cpp)
target_link_libraries(fall13-expClaireHandOcclusionTrial  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(stimulusAndHandTest stimulusAndHandTest.cpp)
target_link_libraries(stimulusAndHandTest  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall13-staircasePointingtraining fall13-staircasePointingtraining.cpp)
target_link_libraries(fall13-staircasePointingtraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
### Spring 2014
add_executable(spring14-evan-haptic spring14-evan-haptic.cpp)
target_link_libraries(spring14-evan-haptic  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-weight spring14-weight.cpp)
target_link_libraries(spring14-weight  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-evan-haptic-oneStim spring14-evan-haptic-oneStim.cpp)
target_link_libraries(spring14-evan-haptic-oneStim  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-evan-haptic-spatial spring14-evan-haptic-spatial.cpp)
target_link_libraries(spring14-evan-haptic-spatial  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-claire-ponzo spring14-claire-ponzo.cpp)
target_link_libraries(spring14-claire-ponzo  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-expClaireHandOcclusionTrial spring14-expClaireHandOcclusionTrial.cpp)
target_link_libraries(spring14-expClaireHandOcclusionTrial  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-expClaireHandOcclusionTraining spring14-expClaireHandOcclusionTraining.cpp)
target_link_libraries(spring14-expClaireHandOcclusionTraining  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-evan-haptic-spatial2 spring14-evan-haptic-spatial2.cpp)
target_link_libraries(spring14-evan-haptic-spatial2  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring14-evan-haptic-tabletop spring14-evan-haptic-tabletop.cpp)
target_link_libraries(spring14-evan-haptic-tabletop  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
### Fall 2014
add_executable(fall14-expClaireHandOcclusionTrial fall14-expClaireHandOcclusionTrial.cpp)
target_link_libraries(fall14-expClaireHandOcclusionTrial  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-expClaireHandOcclusionTrial-test fall14-expClaireHandOcclusionTrial-test.cpp)
target_link_libraries(fall14-expClaireHandOcclusionTrial-test  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-expClaireMotorsReset fall14-expClaireMotorsReset.cpp)
target_link_libraries(fall14-expClaireMotorsReset  Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-evan-haptic fall14-evan-haptic.cpp)
target_link_libraries(fall14-evan-haptic Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-ernst_banks_test_1 fall14-ernst_banks_test_1.cpp)
target_link_libraries(fall14-ernst_banks_test_1 Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-ernst_banks_test_1_VH fall14-ernst_banks_test_1_VH.cpp)
target_link_libraries(fall14-ernst_banks_test_1_VH Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-ernst_banks_test_1.1 fall14-ernst_banks_test_1.1.cpp)
target_link_libraries(fall14-ernst_banks_test_1.1 Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-ernst_banks_test_1.1_VH fall14-ernst_banks_test_1.1_VH.cpp)
target_link_libraries(fall14-ernst_banks_test_1.1_VH Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(fall14-evan-hapticContext fall14-evan-hapticContext.cpp)
target_link_libraries(fall14-evan-hapticContext Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
### Spring 2015
add_executable(spring15-evan-hapticIllusion spring15-evan-hapticIllusion.cpp)
target_link_libraries(spring15-evan-hapticIllusion Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(spring15-evan-hapticIllusion Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-armlength-adj spring15-armlength-adj.cpp)
target_link_libraries(spring15-armlength-adj Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-armlength-grasp spring15-armlength-grasp.cpp)
target_link_libraries(spring15-armlength-grasp Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-calibration spring15-calibration.cpp)
target_link_libraries(spring15-calibration Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-calibration-oneFpress spring15-calibration-oneFpress.cpp)
target_link_libraries(spring15-calibration-oneFpress Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-armlength-graspWtraining spring15-armlength-graspWtraining.cpp)
target_link_libraries(spring15-armlength-graspWtraining Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
#add_executable(spring15-texture spring15-texture.cpp)
#target_link_libraries(spring15-texture Core GLViz Experiment Optotrak Communication BrownSupportLibs ${GL_LIBS} ${Boost_LIBRARIES})
add_executable(spring15-SMT spring15-SMT.cpp)
target_link_libraries(spring15-SMT Core GLViz Experiment Optotrak Communication BrownSupportLibs ${GL_LIBS} ${Boost_LIBRARIES}  ${PHIDGETS_LIBRARIES})
#add_executable(libnoiseTest libnoiseTest.cpp)
#target_link_libraries(libnoiseTest Core GLViz Experiment Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})

## Summer 2015
add_executable(summer15-threeRods summer15-threeRods.cpp)
target_link_libraries(summer15-threeRods  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES} ${PHIDGETS_LIBRARIES})
add_executable(summer15-threeRodsDiag summer15-threeRodsDiag.cpp)
target_link_libraries(summer15-threeRodsDiag  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES} ${PHIDGETS_LIBRARIES})
add_executable(labTools labTools.cpp)
target_link_libraries(labTools  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES} ${PHIDGETS_LIBRARIES})
add_executable(summer15-disparity_motion_3rods_perceptual summer15-disparity_motion_3rods_perceptual.cpp)
target_link_libraries(summer15-disparity_motion_3rods_perceptual  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-disparity_motionMono_3rods_perceptual summer15-disparity_motionMono_3rods_perceptual.cpp)
target_link_libraries(summer15-disparity_motionMono_3rods_perceptual  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-evan-moreIllusions summer15-evan-moreIllusions.cpp)
target_link_libraries(summer15-evan-moreIllusions Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-disparity_motionMono_planes_perceptual summer15-disparity_motionMono_planes_perceptual.cpp)
target_link_libraries(summer15-disparity_motionMono_planes_perceptual  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-disparity_motion_planes_perceptual summer15-disparity_motion_planes_perceptual.cpp)
target_link_libraries(summer15-disparity_motion_planes_perceptual  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-stereomotion_perc_planes summer15-stereomotion_perc_planes.cpp)
target_link_libraries(summer15-stereomotion_perc_planes  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-stereomotion_perc_ramp summer15-stereomotion_perc_ramp.cpp)
target_link_libraries(summer15-stereomotion_perc_ramp  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-stereomotion_perc_stair summer15-stereomotion_perc_stair.cpp)
target_link_libraries(summer15-stereomotion_perc_stair  Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-SMT-pyramid summer15-SMT-pyramid.cpp)
target_link_libraries(summer15-SMT-pyramid Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-SMT-rampwings summer15-SMT-rampwings.cpp)
target_link_libraries(summer15-SMT-rampwings Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})
add_executable(summer15-3Dcues-paraboloid summer15-3Dcues-paraboloid.cpp)
target_link_libraries(summer15-3Dcues-paraboloid Core GLViz Experiment Optotrak Communication BrownSupportLibs  ${GL_LIBS} ${PHIDGET_LIBRARIES} ${Boost_LIBRARIES})

