add_subdirectory(easyCalibration)
add_subdirectory(360display)
add_subdirectory(lightFieldDisplay)
add_subdirectory(qthelix)
add_subdirectory(qtvolumetrichelix)
add_subdirectory(qtmotors)
add_subdirectory(qtmotorstrieste)
add_subdirectory(qtstaircase)
add_subdirectory(qtstimulusflow)
if(COMPILE_STATISTIC)
add_subdirectory(qtbayesian)
endif(COMPILE_STATISTIC)

if (ALP_SUPPORT)
add_subdirectory(qtvolumetrichelixALP)
add_subdirectory(qtvolumetrichelixALPExperiment)
endif(ALP_SUPPORT)
